[package]
name = "shamir-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
bytes = "1.1"
clap = { version = "3", features = ["derive"] }
indicatif = "0.17.7"
rayon = "1.8.0"
