[package]
name = "shamir-encryption"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-based command-line application that implements Shamir's Secret Sharing algorithm"
authors = ["Coline Seguret <coline.seguret@epitech.eu>"]
homepage = "https://github.com/Cleopha/shamir-encryption-cli"
repository = "https://github.com/Cleopha/shamir-encryption-cli"
documentation = "https://github.com/Cleopha/shamir-encryption-cli"
keywords = ["algorithm", "encryption"]
readme = "README.md"
exclude = ["/.github"]

[dependencies]
colored = "2"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1.8"
